# Photoeditor

./: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
